feat: add permission scopes while getting permissons
