# api/docs/swagger.json
@@ -1907,7 +1907,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/auth_service.Permission"
+                                            "$ref": "#/definitions/auth_service.GetPermissionByIDResponse"
                                         }
                                     }
                                 }
@@ -5211,6 +5211,29 @@
                 },
                 "count": {
                     "type": "integer"
+                }
+            }
+        },
+        "auth_service.GetPermissionByIDResponse": {
+            "type": "object",
+            "properties": {
+                "client_platform_id": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "parent_id": {
+                    "type": "string"
+                },
+                "permission_scopes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/auth_service.PermissionScope"
+                    }
                 }
             }
         },
